testsuite/tests/linear/should_fail/LinearNoExt.hs
module LinearNoExt where

type T a = a %1 -> a
